
2024-06-08  David Declerck <david.declerck@ocamlpro.com>

	* fileio.c (apply_file_paths): extracted from cob_chk_file_mapping
	  to factor out duplicated code

2023-06-02  Simon Sobisch <simonsobisch@gnu.org>

	* fisam.c (isam_read_next): use ISSTAT only for COB_WITH_STATUS_02,
	  fixing compile errors with VBISAM

2024-01-30  Ron Norman <rjn@inglenet.com>

	* fisam.c: Updated to set index field type for 'short' & 'int'
	  Enabled support for variable length records is using V-ISAM/D-ISAM

2023-06-02  Simon Sobisch <simonsobisch@gnu.org>

	* fsqlxfd.c (cob_findkey_attr), fileio.c, fisam.c: extracted identical
	  logic from cob_findkey, indexed_findkey and db_findkey;
	  dropping the later two and set mapkey after calling it
	* Makefile.am: link fsqlxfd into all libraries (may be adjusted later)
	* fileio.c (cob_file_create), common.h: prefer relevant enums over int
	* fileio.c (cob_file_sort_using, cob_file_sort_giving): raise
	  COB_EC_SORT_MERGE_FILE_OPEN when applicable
	* fileio.c (cob_copy_check, cob_file_sort_submit, cob_file_sort_retrieve):
	  pass most matching argument type instead of the structures containing it
	* fileio.c (cobsort): new attribute flag_merge
	* fileio.c (cob_file_sort_options), common.h: new function to pass more
	  options, so far only used to set flag_merge

2023-02-23  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c: Changes to speed up COMP-3 handling

2023-02-19  Ron Norman <rjn@inglenet.com>

	* move.c: For large fields use 'cob_decimal_setget_fld'
	* numeric.c: Added support for large BINARY/COMP-X/COMP-N 
	* termio.c: Updated 'bin_digits' table for larger fields
	* common.h: Removed  define  COB_MAX_COMPX

2023-01-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (internal_nanosleep): fix missing identifier (broken merge)

2023-01-15  Ron Norman <rjn@inglenet.com>

	* screenio.c: renamed max_pairs_available as this is defined on HPUX
	* common.c (check_current_date): fixed bad snprintf size
